trunk/Archive2/61/5a896f71e7a4a5/output
+ g++-4.8 -std=c++1y -O2 -Wall -pedantic -pthread main.cpp
main.cpp:2:20: error: variable or field ‘populate’ declared void
 void populate(std::vector<T> &t, BlockGrid &grid) {
                    ^
main.cpp:2:15: error: ‘vector’ is not a member of ‘std’
 void populate(std::vector<T> &t, BlockGrid &grid) {
               ^
main.cpp:2:28: error: expected primary-expression before ‘>’ token
 void populate(std::vector<T> &t, BlockGrid &grid) {
                            ^
main.cpp:2:31: error: ‘t’ was not declared in this scope
 void populate(std::vector<T> &t, BlockGrid &grid) {
                               ^
main.cpp:2:34: error: ‘BlockGrid’ was not declared in this scope
 void populate(std::vector<T> &t, BlockGrid &grid) {
                                  ^
main.cpp:2:45: error: ‘grid’ was not declared in this scope
 void populate(std::vector<T> &t, BlockGrid &grid) {
                                             ^
